[package]
name = "bongtalk"
authors = ["l1npengtul <l1npengtul@protonmail.com>"]
version = "0.1.0"
edition = "2021"
license = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
wasm = ["wasm_thread"]

[dependencies]
upon = "0.6"
once_cell = "1.17"
serde = "1.0"
thiserror = "1.0"
ahash = "0.8"
flume = "0.10"
dashmap = "5.4"

[dependencies.rhai]
version = "1.12"
features = ["internals", "sync", "metadata"]

[dependencies.wasm_thread]
version = "0.2"
optional = true
