[package]
name = "bongtalk"
authors = ["l1npengtul <l1npengtul@protonmail.com>"]
version = "0.1.0"
edition = "2021"
license = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
wasm = ["wasm_thread"]

[dependencies]
ramhorns = "0.14"
once_cell = "1.17"
thiserror = "1.0"
ahash = "0.8"
flume = "0.10"
dashmap = "5.4"
parking_lot = "0.12"
smartstring = "1.0"
mini-moka = "0.10"
bbscope = "0.1"
quick-xml = "0.28"
rgb = "0.8"
lending-iterator = "0.1"

[dependencies.csscolorparser]
version = "0.6"
features = ["named-colors", "rust-rgb"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rhai]
version = "1.12"
features = ["internals", "sync", "metadata", "debugging", "no_std"]

[dependencies.wasm_thread]
version = "0.2"
optional = true
